--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,3 +3,9 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=validate
+
+# Jackson JSON ??? ???
+spring.jackson.time-zone=Asia/Seoul
+
+# Hibernate JDBC ??? (??)
+spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Seoul
