--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -4,3 +4,7 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+server.servlet.session.cookie.same-site=Lax
+server.servlet.session.cookie.secure=false
+server.servlet.session.cookie.path=/
