--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,8 +4,15 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=validate
 
-# Jackson JSON ??? ???
+# Jackson JSON
 spring.jackson.time-zone=Asia/Seoul
 
-# Hibernate JDBC ??? (??)
+# Hibernate JDBC
 spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Seoul
+
+server.servlet.session.cookie.same-site=None
+server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.path=/
+
+server.forward-headers-strategy=framework
